tests/baselines/reference/unusedPrivateVariableInClass2.errors.txt
unusedPrivateVariableInClass2.ts(2,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
unusedPrivateVariableInClass2.ts(2,13): error TS6133: 'x' is declared but its value is never read.
unusedPrivateVariableInClass2.ts(3,13): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
unusedPrivateVariableInClass2.ts(3,13): error TS6133: 'y' is declared but its value is never read.


==== unusedPrivateVariableInClass2.ts (4 errors) ====
    class greeter {
        private x: string;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
                ~
!!! error TS6133: 'x' is declared but its value is never read.
        private y: string;
                ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
                ~
!!! error TS6133: 'y' is declared but its value is never read.
    }